add background color to hover on nav item

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 </head>
 
 <body>
+
+<div class="header">
     <!-- NAV BAR AND LOGO -->
     <div class="container-fluid">
         <div class="navbar">
@@ -45,22 +47,21 @@
     <!-- END OF NAV BAR -->
 
     <!-- CONTENT -->
-<div class="header">
-    <div class="container">
-        <div class="row main-content d-flex align-items-center justify-content-around">
-            <div class="col-xl-6 col-left">
-                <h1>Give your life <br> a new style!</h1>
-                <p>
-                    Success isn't always about greatness. It's about consistency. <br> 
-                    Consistent hard work gains success. Greatness will come.
-                </p>
-                <a href="#" class="btn">Explore now &#8594</a>
+    <div class="background-container">
+        <div class="container">
+            <div class="row main-content d-flex align-items-center justify-content-around">
+                <div class="col-xl-6 col-left">
+                    <h1>Give your life <br> a new style!</h1>
+                    <p>
+                        Success isn't always about greatness. It's about consistency. <br>
+                        Consistent hard work gains success. Greatness will come.
+                    </p>
+                    <a href="#" class="btn">Explore now &#8594</a>
+                </div>
+                <div class="col-md-8 col-right">
+                    <img src="./media/image1.png" alt="football-players">
+                </div>
             </div>
-            <div class="col-md-8 col-right">
-                <img src="./media/image1.png" alt="football-players">
-            </div>
-
-            
         </div>
     </div>
 </div>
