--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <ul class="navbar-items d-flex justify-content-center text-decoration-none">
                     <li><a class="nav-item" href="#">home</a></li>
                     <li><a class="nav-item" href="#">products</a></li>
-                    <li><a class="nav-item" href="#">about</a></li>
+                    <li><a class="nav-item" href="#">returns and faq</a></li>
                     <li><a class="nav-item" href="#">contact</a></li>
                     <li><a class="nav-item" href="#">account</a></li>
                     <img id="cart-image" src="./media/cart.png" alt="cart-image">
@@ -182,34 +182,118 @@
                         <span class="visually-hidden">Next</span>
                     </button>
                 </div>
-                
-                <!-- end carousel -->
-                <!-- <div class="col-lg-3">
-                    <div>
-                        <img src="./media/popular-1.jpeg" alt="popular-item-1 mb-2">
+            </div>   
+            <hr>
+            <!-- TESTIMONIALS -->
+
+            <div class="container testimonials">
+                <div class="row">
+                    <div class="col-lg-3 testimonials-item">
+                        <i class="fa-solid fa-quote-left"></i>
+                        <p class="text-center">
+                            <q class="fst-italic fs-6">Super pleased with all that Golden Shoes has to offer, fast delivery.</q>
+                        </p>
+                        <div class="text-center">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <img class="mt-2 mb-2" src="./media/user-1.png" alt="user-1">
+                        <h5 class="fs-6">Mary Hudson</h5>
                     </div>
-                    <div class="text-center mt-2">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
+                    <div class="col-lg-3 testimonials-item">
+                        <i class="fa-solid fa-quote-left"></i>
+                        <p class="text-center ">
+                            <q class="fst-italic fs-6">The shoes were delivered fast with a small gift, thank you Golden Shoes</q>
+                        </p>
+                        <div class="text-center">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <img class="mt-2 mb-2" src="./media/user-2.png" alt="user-2">
+                        <h5 class="fs-6">Peter Parker</h5>
+                    </div>
+                    <div class="col-lg-3 testimonials-item">
+                        <i class="fa-solid fa-quote-left"></i>
+                        <p class="text-center">
+                            <q class="fst-italic fs-6"> The pair was not my size, returned it without any hussle.</q>
+                        </p>
+                        <div class="text-center">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <img class="mt-2 mb-2" src="./media/user-3.png" alt="user-3">
+                        <h5 class="fs-6">MJ Watson</h5>
                     </div>
                 </div>
-                <div class="col-lg-3">
-                    <img src="./media/popular-2.jpeg" alt="popular-item-2">
-                </div>
-                <div class="col-lg-3">
-                    <img src="./media/popular-3.jpeg" alt="popular-item-3">
-                </div>
-                <div class="col-lg-3">
-                    <img src="./media/popular-4.jpeg" alt="popular-item-4">
-                </div> -->
             </div>
         </div>
     </div>
+    <br>
+    <br>   
 </div>
     <!-- END CONTENT -->
+
+<footer class="flex-rw">
+
+    <ul class="footer-list-top">
+        <li><h4 class="footer-list-header">About Golden Shoe</h4></li>
+        <li><a href='#' class="generic-anchor footer-list-anchor text-uppercase">get to know us</a></li>
+        <li><a href='#' class="generic-anchor footer-list-anchor text-uppercase">promos</a></li>
+        <li><a href='#' class="generic-anchor footer-list-anchor text-uppercase">become a retailer</a></li>
+        <li><a href='#' class="generic-anchor footer-list-anchor text-uppercase">job openings</a></li>
+        <li><a href='#' class="generic-anchor footer-list-anchor text-uppercase">events</a></li>
+    </ul>
+    <ul class="footer-list-top">
+        <li><h4 class="footer-list-header">The Shoes Selection</h4></li>
+        <li><a href='#' class="generic-anchor footer-list-anchor text-uppercase">sales and offers</a></li>
+        <li><a href='#' class="generic-anchor footer-list-anchor text-uppercase">mens collection</a></li>
+        <li><a href='#' class="generic-anchor footer-list-anchor text-uppercase">ladies collection</a></li>
+        <li><a href='#' class="generic-anchor footer-list-anchor text-uppercase">kids collection</a></li>
+        <li><a href='#' class="generic-anchor footer-list-anchor text-uppercase">seasonal collection</a></li>
+    </ul>
+    <ul class="footer-list-top">
+        <li id='help'>
+            <h4 class="footer-list-header">Please Help Me</h4>
+        </li>
+        <li><a href='#' class="generic-anchor footer-list-anchor">CONTACT</a></li>
+        <li><a href='#' class="generic-anchor footer-list-anchor">RETURNS/FAQ</a></li>
+        <li id='find-a-store'><a href='#' class="generic-anchor footer-list-anchor">STORE LOCATOR</a></li>
+        <li id='user-registration'><a href='#' class="generic-anchor footer-list-anchor">NEW USERS</a></li>
+        <li id='order-tracking'><a href='#' class="generic-anchor footer-list-anchor">ORDER STATUS</a></li>
+    </ul>
+    <section class="footer-social-section flex-rw">
+        <span class="footer-social-overlap footer-social-connect">CONNECT <span class="footer-social-small">with</span> US
+        </span>
+        <span class="footer-social-overlap footer-social-icons-wrapper">
+            <a href="https://www.pinterest.com/" class="generic-anchor" target="_blank" title="Pinterest"><i class="fa fa-pinterest"></i></a>
+            <a href="https://www.facebook.com" class="generic-anchor" target="_blank" title="Facebook"><i class="fa fa-facebook"></i></a>
+            <a href="https://twitter.com/" class="generic-anchor" target="_blank" title="Twitter"><i class="fa fa-twitter"></i></a>
+            <a href="http://instagram.com/" class="generic-anchor" target="_blank" title="Instagram"><i class="fa fa-instagram"></i></a>
+            <a href="https://www.youtube.com/" class="generic-anchor" target="_blank" title="Youtube"><i class="fa fa-youtube"></i></a>
+            <a href="https://plus.google.com/" class="generic-anchor" target="_blank" title="Google Plus"><i class="fa fa-google-plus"></i></a>
+        </span>
+    </section>
+    <section class="footer-bottom-section flex-rw">
+        <div class="footer-bottom-wrapper">
+            <i class="fa fa-copyright" role="copyright">
+            </i> 2022 <address class="footer-address" role="company address">London, UK</address><span
+                class="footer-bottom-rights"> - All Rights Reserved - </span>
+        </div>
+        <div class="footer-bottom-wrapper">
+            <a href="#" class="generic-anchor" rel="nofollow">Terms</a> | <a
+                href="#" class="generic-anchor" rel="nofollow">Privacy</a>
+        </div>
+    </section>
+</footer>
 
 </body>
 </html>
