add single product page

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <div class="col-md-12 col-lg-12 flex-row">
                 <nav>
                     <ul class="navbar-items d-flex aling-items-center justify-content-center flex-row text-decoration-none">
-                        <li><a class="nav-item" href="#">home</a></li>
-                        <li><a class="nav-item" href="#">store</a></li>
+                        <li><a class="nav-item" href="./index.html">home</a></li>
+                        <li><a class="nav-item" href="./products.html">store</a></li>
                         <li><a class="nav-item" href="#">account</a></li>
                         <img id="cart-image" src="./media/cart.png" alt="cart-image">
                     </ul>
@@ -248,6 +248,8 @@
 </div>
     <!-- END CONTENT -->
 
+    <!-- FOOTER -->
+
 <footer class="flex-rw">
 
     <ul class="footer-list-top">
@@ -300,6 +302,8 @@
         </div>
     </section>
 </footer>
+
+<!-- END OF FOOTER -->
 
 </body>
 </html>
