add measurements pdf

--- a/product-details.html
+++ b/product-details.html
@@ -104,6 +104,10 @@
                             <span class="disabled">43</span>
                         </div>
                     </p>
+                    <p>Psst...have a look first at the measurements:</p>
+                    <a href="./media/tinywow_men-size_5660277.pdf" target="_blank">Men Sizes</a>
+                    <a href="./media/tinywow_women-shoe_5660303.pdf" target="_blank">Women Sizes</a>
+                    <a href="./media/tinywow_Kids-ShoeSize-Chart-Age_5660360.pdf" target="_blank">Kids Sizes</a><br><br>
                     <a href="#" class="btn">Add to cart &#8594</a>
                 </div>
             </div>
