add mock cart page

--- a/products.html
+++ b/products.html
@@ -47,7 +47,9 @@
                             <li><a class="nav-item" href="./index.html">home</a></li>
                             <li><a class="nav-item" href="./store">store</a></li>
                             <li><a class="nav-item" href="#">account</a></li>
-                            <img id="cart-image" src="./media/cart.png" alt="cart-image">
+                            <a href="./cart.html">
+                                <img id="cart-image" src="./media/cart.png" alt="cart-image">
+                            </a>
                         </ul>
                     </nav>
                 </div>
@@ -85,7 +87,10 @@
                         <i class="fa-solid fa-star"></i>
                     </div>
                     <p class="text-center">Red T-shirt <span
-                            class="text-decoration-line-through text-danger">25.99</span> 15.99 &#163 </p>
+                            class="text-decoration-line-through text-danger">25.99</span> 15.99 &#163 
+                        <a href="./cart.html" class="btn">Add to cart</a>    
+                    </p>
+                    
                 </div>
                 <div class="col-sm-3 col-md-3 col-6">
                     <a class="text-dark" href="./product-details.html">
@@ -98,7 +103,9 @@
                         <i class="fa-solid fa-star"></i>
                     </div>
                     <p class="text-dark text-center">Running Shoes <span
-                            class="text-decoration-line-through text-danger">85.99</span> 55.99 &#163 </p>
+                            class="text-decoration-line-through text-danger">85.99</span> 55.99 &#163 
+                            <a href="./cart.html" class="btn">Add to cart</a>   
+                        </p>
                     </a>
                 </div>
                 <div class="col-sm-3 col-md-3 col-6">
@@ -111,7 +118,9 @@
                         <i class="fa-solid fa-star"></i>
                     </div>
                     <p class="text-center">Leather Shoes <span
-                            class="text-decoration-line-through text-danger">95.99</span> 65.99 &#163 </p>
+                            class="text-decoration-line-through text-danger">95.99</span> 65.99 &#163 
+                        <a href="./cart.html" class="btn">Add to cart</a>       
+                    </p>
                 </div>
                 <div class="col-md-3 col-sm-3 col-6">
                     <img src="./media/product-4.jpg" alt="product-4">
@@ -123,7 +132,9 @@
                         <i class="fa-solid fa-star"></i>
                     </div>
                     <p class="text-center">Blue T-shirt <span
-                            class="text-decoration-line-through text-danger">25.99</span> 15.99 &#163 </p>
+                            class="text-decoration-line-through text-danger">25.99</span> 15.99 &#163 
+                        <a href="./cart.html" class="btn">Add to cart</a>   
+                    </p>
                 </div>
             </div>
         <br>
@@ -138,7 +149,9 @@
                         <i class="fa-solid fa-star"></i>
                     </div>
                     <p class="text-center">Hi-Top Sneakers <span
-                            class="text-decoration-line-through text-danger">115.99</span> 95.99 &#163 </p>
+                            class="text-decoration-line-through text-danger">115.99</span> 95.99 &#163 
+                        <a href="./cart.html" class="btn">Add to cart</a>   
+                    </p>
                 </div>
                 <div class="col-md-3 col-sm-3 col-6">
                     <img src="./media/product-6.jpg" alt="product-6">
@@ -149,7 +162,9 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                     </div>
-                    <p class="text-center">Black T-shirt 25.99 &#163 </p>
+                    <p class="text-center">Black T-shirt 25.99 &#163 <br>
+                        <a href="./cart.html" class="btn">Add to cart</a>   
+                    </p>
                 </div>
                 <div class="col-md-3 col-sm-3 col-6">
                     <img src="./media/product-7.jpg" alt="product-7">
@@ -160,7 +175,9 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                     </div>
-                    <p class="text-center">HRX Socks 5.99 &#163 </p>
+                    <p class="text-center">HRX Socks 5.99 &#163 <br>
+                        <a href="./cart.html" class="btn">Add to cart</a>   
+                    </p>
                 </div>
                 <div class="col-md-3 col-sm-3 col-6">
                     <img src="./media/product-8.jpg" alt="product-8">
@@ -171,7 +188,9 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                     </div>
-                    <p class="text-center">Fossil 300X 125.99 &#163 </p>
+                    <p class="text-center">Fossil 300X 125.99 &#163 <br>
+                        <a href="./cart.html" class="btn">Add to cart</a>   
+                    </p>
                 </div>
             </div>
         <br>
@@ -186,7 +205,9 @@
                         <i class="fa-solid fa-star"></i>
                     </div>
                     <p class="text-center">Roadster C2X <span
-                            class="text-decoration-line-through text-danger">215.99</span> 195.99 &#163 </p>
+                            class="text-decoration-line-through text-danger">215.99</span> 195.99 &#163 
+                            <a href="./cart.html" class="btn">Add to cart</a>       
+                    </p>
                 </div>
                 <div class="col-md-3 col-sm-3 col-6">
                     <img src="./media/product-10.jpg" alt="product-10">
@@ -197,7 +218,9 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                     </div>
-                    <p class="text-center">HRX Black 95.99 &#163 </p>
+                    <p class="text-center">HRX Black 95.99 &#163 <br>
+                        <a href="./cart.html" class="btn">Add to cart</a>   
+                    </p>
                 </div>
                 <div class="col-md-3 col-sm-3 col-6">
                     <img src="./media/product-11.jpg" alt="product-11">
@@ -208,7 +231,9 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                     </div>
-                    <p class="text-center">HRX Runner 75.99 &#163 </p>
+                    <p class="text-center">HRX Runner 75.99 &#163 <br>
+                        <a href="./cart.html" class="btn">Add to cart</a>   
+                    </p>
                 </div>
                 <div class="col-md-3 col-sm-3 col-6">
                     <img src="./media/product-12.jpg" alt="product-12">
@@ -219,7 +244,9 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                     </div>
-                    <p class="text-center">HRX Lifter 85.99 &#163 </p>
+                    <p class="text-center">HRX Lifter 85.99 &#163 <br>
+                        <a href="./cart.html" class="btn">Add to cart</a>   
+                    </p>
                 </div>
                 <div class="pagination mt-5">
                     <span>1</span>
@@ -247,7 +274,9 @@
                     <i class="fa-solid fa-star"></i>
                 </div>
                 <p class="text-center">Red T-shirt <span class="text-decoration-line-through text-danger">25.99</span>
-                    15.99 &#163 </p>
+                    15.99 &#163 
+                    <a href="./cart.html" class="btn">Add to cart</a>
+                </p>
             </div>
             <div class="col-md-3 col-sm-4">
                 <img src="./media/product-2.jpg" alt="product-2">
@@ -259,7 +288,10 @@
                     <i class="fa-solid fa-star"></i>
                 </div>
                 <p class="text-center">Running Shoes <span class="text-decoration-line-through text-danger">85.99</span>
-                    55.99 &#163 </p>
+                    55.99 &#163 
+                    <a href="./cart.html" class="btn">Add to cart</a>
+                </p>
+
             </div>
             <div class="col-md-3 col-sm-4">
                 <img src="./media/product-3.jpg" alt="product-3">
@@ -271,7 +303,9 @@
                     <i class="fa-solid fa-star"></i>
                 </div>
                 <p class="text-center">Leather Shoes <span class="text-decoration-line-through text-danger">95.99</span>
-                    65.99 &#163 </p>
+                    65.99 &#163 
+                    <a href="./cart.html" class="btn">Add to cart</a>
+                </p>
             </div>
             <div class="col-md-3 col-sm-4">
                 <img src="./media/product-4.jpg" alt="product-4">
@@ -283,7 +317,9 @@
                     <i class="fa-solid fa-star"></i>
                 </div>
                 <p class="text-center">Blue T-shirt <span class="text-decoration-line-through text-danger">25.99</span>
-                    15.99 &#163 </p>
+                    15.99 &#163 
+                    <a href="./cart.html" class="btn">Add to cart</a>
+                </p>
             </div>
         </div>
     </div>
@@ -297,7 +333,7 @@
             </h2>
             <div class="col-sm-4 col-md-3 col-lg-3 categories-img">
                 <img src="./media/category-1.jpg" alt="shoes-image-1">
-                <a class="text-decoration-none" href="">
+                <a class="text-decoration-none text-danger" href="">
                     <p class="text-center mt-2 "> Red Nation Sneakers </p>
                     <div class="text-center text-dark">
                         <i class="fa-solid fa-star"></i>
@@ -307,12 +343,14 @@
                         <i class="fa-solid fa-star-half-stroke"></i>
                     </div>
                     <p class="text-center fw-bold"> ONLY <span class="text-danger fw-bolder">69.99
-                            &#163;</span></p>
+                            &#163;</span><br>
+                            <a href="./cart.html" class="btn">Add to cart</a>    
+                    </p>
                 </a>
             </div>
             <div class="col-sm-4 col-md-3 col-lg-3 categories-img">
                 <img src="./media/category-2.jpg" alt="shoes-image-2">
-                <a class="text-decoration-none" href="">
+                <a class="text-decoration-none text-danger" href="">
                     <p class="text-center mt-2"> Superstar Sneakers </p>
                     <div class="text-center text-dark">
                         <i class="fa-solid fa-star"></i>
@@ -322,12 +360,14 @@
                         <i class="fa-solid fa-star-half-stroke"></i>
                     </div>
                     <p class="text-center fw-bold"> ONLY <span class="text-danger fw-bolder">55.99
-                            &#163;</span></p>
+                            &#163;</span><br>
+                            <a href="./cart.html" class="btn">Add to cart</a>
+                    </p>
                 </a>
             </div>
             <div class="col-sm-4 col-md-3 col-lg-3 categories-img">
                 <img src="./media/category-3.jpg" alt="shoes-image-3">
-                <a class="text-decoration-none" href="">
+                <a class="text-decoration-none text-danger" href="">
                     <p class="text-center mt-2"> Golden Special Sneakers </p>
                     <div class="text-center text-dark">
                         <i class="fa-solid fa-star"></i>
@@ -337,7 +377,9 @@
                         <i class="fa-solid fa-star"></i>
                     </div>
                     <p class="text-center fw-bold"> ONLY <span class="text-danger fw-bolder">52.49
-                            &#163;</span> </p>
+                            &#163;</span> <br>
+                            <a href="./cart.html" class="btn">Add to cart</a>    
+                    </p>
                 </a>
             </div>
         </div>
