--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
                         <li><a class="nav-item" href="./index.html">home</a></li>
                         <li><a class="nav-item" href="./products.html">store</a></li>
                         <li><a class="nav-item" href="#">account</a></li>
-                        <img id="cart-image" src="./media/cart.png" alt="cart-image">
+                        <a href="./cart.html">
+                            <img id="cart-image" src="./media/cart.png" alt="cart-image">
+                        </a>
                     </ul>
                 </nav>
             </div>
@@ -81,6 +83,7 @@
                     <a class="text-decoration-none" href="">
                         <p class="text-center mt-2"> Red Nation Sneakers </p>
                         <p class="text-center fw-bold"> ONLY <span class="text-danger fw-bolder">69.99 &#163;</span></p>
+                        <a href="./products.html" class="btn">See in store &#8594</a>
                     </a>
                 </div>
                 <div class="col-sm-4 col-md-3 col-lg-3 categories-img">
@@ -88,6 +91,7 @@
                     <a class="text-decoration-none" href="">
                         <p class="text-center mt-2"> Superstar Sneakers </p>
                         <p class="text-center fw-bold"> ONLY <span class="text-danger fw-bolder">55.99 &#163;</span></p>
+                        <a href="./products.html" class="btn">See in store &#8594</a>
                     </a>
                 </div>
                 <div class="col-sm-4 col-md-3 col-lg-3 categories-img">
@@ -95,6 +99,7 @@
                     <a class="text-decoration-none" href="">
                         <p class="text-center mt-2"> Golden Special Sneakers </p>
                         <p class="text-center fw-bold"> ONLY <span class="text-danger fw-bolder">52.49 &#163;</span> </p>
+                        <a href="./products.html" class="btn">See in store &#8594</a>
                     </a>
                 </div>
             </div>
