--- a/product-details.html
+++ b/product-details.html
@@ -48,7 +48,9 @@
                             <li><a class="nav-item" href="./index.html">home</a></li>
                             <li><a class="nav-item" href="./store">store</a></li>
                             <li><a class="nav-item" href="#">account</a></li>
-                            <img id="cart-image" src="./media/cart.png" alt="cart-image">
+                            <a href="./cart.html">
+                                <img id="cart-image" src="./media/cart.png" alt="cart-image">
+                            </a>
                         </ul>
                     </nav>
                 </div>
