add content to the login page with form

--- a/account.html
+++ b/account.html
@@ -24,7 +24,7 @@
     <script src="https://kit.fontawesome.com/5ef8bf6f91.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.js"></script>
 
-    <title>Shopping cart | Golden Shoe </title>
+    <title>LOGIN | Golden Shoe </title>
 </head>
 
 <body>
@@ -47,7 +47,7 @@
                             class="navbar-items d-flex aling-items-center justify-content-center flex-row text-decoration-none">
                             <li><a class="nav-item" href="./index.html">home</a></li>
                             <li><a class="nav-item" href="./store">store</a></li>
-                            <li><a class="nav-item" href="./account.html">account</a></li>
+                            <li><a class="nav-item" href="#">account</a></li>
                             <img id="cart-image" src="./media/cart.png" alt="cart-image">
                         </ul>
                     </nav>
@@ -59,112 +59,32 @@
     <!-- END OF NAV BAR -->
 <div class="background-container">
     <div class="container pb-5">
-        <!-- CART ITEM DETAILS -->
-        <div class="cart-page">
-            <table>
-                <tr class="text-uppercase table-header">
-                    <th class="ps-2">Product</th>
-                    <th>Quantity</th>
-                    <th>Price   </th>
-                </tr>
-                <tr>
-                    <td>
-                        <div class="cart-info">
-                            <img class="mb-2 mt-3" id="option1-big" src="./media/product-2.jpg" alt="product-2">
-                            <table class="inner-table d-flex aling-items-center justify-content-center pt-3">
-                                <tr >
-                                    <th class="ps-3">Name: &nbsp;</th>
-                                    <td>Running Shoes</td>
-                                </tr>
-                                <tr>
-                                    <th class="ps-3">Size: &nbsp;</th>
-                                    <td>42</td>
-                                </tr>
-                                <tr>
-                                    <th class="ps-3">Color: &nbsp;</th>
-                                    <td>Black/White</td>
-                                </tr>
-                            </table>
-                            <br>
-                        </div>
-                    </td>
-                    <td><input type="number" value="1" min="0" max="99"></td>
-                    <td>55.99 &#163</td>
-                    <td><i class="fa fa-trash" data-bs-toggle="modal" data-bs-target="#exampleModal"></i></td>
-                </tr>
-                <tr>
-                    <td>
-                        <div class="cart-info">
-                            <img class="mb-2 mt-3" id="option1-big" src="./media/product-3.jpg" alt="product-3">
-                            <table class="inner-table d-flex aling-items-center justify-content-center pt-3">
-                                <tr >
-                                    <th class="ps-3">Name: &nbsp;</th>
-                                    <td>Leather Shoes</td>
-                                </tr>
-                                <tr>
-                                    <th class="ps-3">Size: &nbsp;</th>
-                                    <td>45</td>
-                                </tr>
-                                <tr>
-                                    <th class="ps-3">Color: &nbsp;</th>
-                                    <td>Black/White</td>
-                                </tr>
-                            </table>
-                            <br>
-                        </div>
-                    </td>
-                    <td><input type="number" value="1" min="0" max="99"></td>
-                    <td>65.99 &#163</td>
-                    <td><i class="fa fa-trash" data-bs-toggle="modal" data-bs-target="#exampleModal"></i></td>
-                </tr>
-            </table>
-            <div class="total-price">
-                <table>
-                    <tr>
-                        <td>Subtotal</td>
-                        <td>97.59 &#163</td>
-                    </tr>
-                    <tr>
-                        <td>TAX</td>
-                        <td>24.39 &#163</td>
-                    </tr>
-                    <tr>
-                        <td>Total</td>
-                        <td>121.98 &#163</td>
-                    </tr>
-                </table>
+        <div class="row pt-5">
+            <div class="col-2 col-sm-4 col-md-6 offset-lg-2 col-lg-5">
+                <img id="form-image" src="./media/image1.png" alt="form-image">
             </div>
-            <div class="mt-5 d-flex justify-content-end">
-            <a href="#" class="btn">Finish order &#8594</a>
+            <div class="col-4 col-sm-4 col-md-4 col-lg-4">
+                <div class="form-container">
+
+                </div>
             </div>
         </div>
     </div>
 </div>
-
-<!-- MODAL -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title text-uppercase" id="exampleModalLabel">Confirm change</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-            Are you sure you want to remove this item from the cart?
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn">Save changes</button>
-        </div>
-      </div>
-    </div>
-  </div>
-<!-- MODAL -->
+    
 
 
- <!-- FOOTER -->
 
- <footer class="flex-rw">
+
+
+
+
+
+
+
+<!-- FOOTER -->
+
+<footer class="flex-rw">
 
     <ul class="footer-list-top">
         <li>
