--- a/product-details.html
+++ b/product-details.html
@@ -24,7 +24,7 @@
     <script src="https://kit.fontawesome.com/5ef8bf6f91.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.js"></script>
 
-    <title>Products | Golden Shoe </title>
+    <title>Product Details | Golden Shoe </title>
 </head>
 
 <body>
@@ -47,7 +47,7 @@
                             class="navbar-items d-flex aling-items-center justify-content-center flex-row text-decoration-none">
                             <li><a class="nav-item" href="./index.html">home</a></li>
                             <li><a class="nav-item" href="./store">store</a></li>
-                            <li><a class="nav-item" href="#">account</a></li>
+                            <li><a class="nav-item" href="./account.html">account</a></li>
                             <a href="./cart.html">
                                 <img id="cart-image" src="./media/cart.png" alt="cart-image">
                             </a>
